--- a/diracx/values.yaml
+++ b/diracx/values.yaml
@@ -520,7 +520,7 @@ elasticsearch:
   # Request smaller persistent volumes.
   volumeClaimTemplate:
     accessModes: ["ReadWriteOnce"]
-    storageClassName: "standard"
+#    storageClassName: "standard"
     resources:
       requests:
         storage: 100M
