--- a/diracx/rancher/desy-install.yaml
+++ b/diracx/rancher/desy-install.yaml
@@ -19,15 +19,22 @@ diracx:
     DIRACX_OTEL_ENABLED: "{{ open_telemetry }}"
     DIRACX_OTEL_GRPC_ENDPOINT: "diracx-demo-opentelemetry-collector:4317"
     DIRACX_OTEL_GRPC_INSECURE: "true"
-    DIRACX_CONFIG_BACKEND_URL: "git+file:///gitlab.cta-observatory.org/cta-computing/dpps/workload/wms-configuration/cs.yaml"
+    DIRACX_CONFIG_BACKEND_URL: "git+https://gitlab.cta-observatory.org/natthan.pigoux/cs_store.git"
+    #DIRACX_CONFIG_BACKEND_URL: "git+https://gitlab.cta-observatory.org/cta-computing/dpps/workload/wms-configuration.git"
     #DIRACX_SERVICE_AUTH_TOKEN_KEY: "file:///signing-key/rsa256.key"
-  # sqlDbs:
-  #   dbs:
-  #     AuthDB:
-  #     JobDB:
-  #     JobLoggingDB:
-  #     SandboxMetadataDB:
-  #     TaskQueueDB:
+  sqlDbs:
+    default:
+      rootUser: root
+      rootPassword: rRb9nsprhJsCAQx
+      user: Dirac
+      password: ctadirac
+      host: majestix-vm1.zeuthen.desy.de:3306
+    dbs:
+      AuthDB:
+      JobDB:
+      JobLoggingDB:
+      SandboxMetadataDB:
+      TaskQueueDB:
   osDbs:
     dbs:
       JobParametersDB:
@@ -47,6 +54,11 @@ developer:
 
 cert-manager:
   enabled: false
+
+initSql:
+  # Should DiracX include an init container which manages the SQL DB schema?
+  enabled: False
+  env: {}
 
 mysql:
   enabled: false
