--- a/diracx/rancher/desy-install.yaml
+++ b/diracx/rancher/desy-install.yaml
@@ -40,6 +40,7 @@ ingress:
   tlsSecretName: myingress-cert
   annotations:
     external-dns.alpha.kubernetes.io/hostname: diracx-cert.cta-test.zeuthen.desy.de
+    external-dns.alpha.kubernetes.io/target: 141.34.51.79
   # Specific IP used for external access
   loadBalancerIP: 141.34.51.79
 
