--- a/diracx/rancher/desy-install.yaml
+++ b/diracx/rancher/desy-install.yaml
@@ -8,8 +8,9 @@ diracx:
     DIRACX_SANDBOX_STORE_BUCKET_NAME: demo-sandboxes
     DIRACX_SANDBOX_STORE_S3_CLIENT_KWARGS: '{"endpoint_url": "http://diracx-cert.cta-test.zeuthen.desy.de:32000", "aws_access_key_id": "console", "aws_secret_access_key": "console123"}'
     DIRACX_SANDBOX_STORE_AUTO_CREATE_BUCKET: "true"
-    DIRACX_CONFIG_BACKEND_URL: "git+https://gitlab.cta-observatory.org/natthan.pigoux/cs_store.git"
+    DIRACX_CONFIG_BACKEND_URL: "git+https://gitlab.cta-observatory.org/natthan.pigoux/cs_store.git" # specific branch name with @main
     #DIRACX_CONFIG_BACKEND_URL: "git+https://gitlab.cta-observatory.org/cta-computing/dpps/workload/wms-configuration.git"
+    DIRACX_SERVICE_AUTH_TOKEN_ISSUER: https://diracx-cert.cta-test.zeuthen.desy.de
 
   # use Majestix DBs
   sqlDbs:
@@ -22,6 +23,7 @@ diracx:
       host: majestix-vm1.zeuthen.desy.de:3306
     dbs:
       AuthDB:
+        internalName: DiracXAuthDB
       JobDB:
       JobLoggingDB:
       SandboxMetadataDB:
@@ -38,10 +40,12 @@ ingress:
   enabled: true
   className: "nginx" # Use the installed nginx ingress controller instead of traefik
   tlsSecretName: myingress-cert
+  hosts:
   annotations:
+    # # Specific hostname used for external access
     external-dns.alpha.kubernetes.io/hostname: diracx-cert.cta-test.zeuthen.desy.de
     external-dns.alpha.kubernetes.io/target: 141.34.51.79
-  # Specific IP used for external access
+  # # Specific IP used for external access
   loadBalancerIP: 141.34.51.79
 
 developer:
@@ -73,22 +77,51 @@ mysql:
     periodSeconds: 10
     timeoutSeconds: 1
     failureThreshold: 30
-    successThreshold: 1
+    successThreshold: 1 
+
 dex:
   config:
-    issuer: https://iam-ctao.cloud.cnaf.infn.it
+    issuer: https://diracx-cert.cta-test.zeuthen.desy.de:32002
 
     staticClients:
-    - id: 33477569-e6a9-4630-8f5c-b9db028378f2
-      public: false
-      name: 'DiracX app'
-      # Find another way to store this or use a public client
-      secret: UNBJqpjy9-Z6Ma6kudHuvDmP8ywsTq6-PotD3EdLs6DtmuWseK2UJnrsEysX5D0P3dcbpqLAdoKxPYE80xS8Gg
-      redirectURIs:
-        - 'https://diracx-cert.cta-test.zeuthen.desy.de/api/auth/device/complete'
-        - 'https://diracx-cert.cta-test.zeuthen.desy.de/api/auth/authorize/complete'
+      - id: 33477569-e6a9-4630-8f5c-b9db028378f2
+        public: true
+        name: 'ctao-wms-auth'
+        redirectURIs:
+          - 'https://diracx-cert.cta-test.zeuthen.desy.de/api/auth/device/complete'
+          - 'https://diracx-cert.cta-test.zeuthen.desy.de/api/auth/authorize/complete'
 
     staticPasswords:
       - email: "admin@example.com"
         hash: "$2a$10$2b2cU8CPhOTaGrs1HRQuAueS7JTT5ZHsHSzYiFPm1leZck7Mc8T4W"
         username: "admin"
+  #config:
+    #issuer: https://iam-ctao.cloud.cnaf.infn.it/
+    # issuer: https://diracx-cert.cta-test.zeuthen.desy.de:32002
+    # # storage:
+    # #   type: kubernetes
+    # #   config:
+    # #     inCluster: true
+    # # web:
+    # #   http: https://diracx-cert.cta-test.zeuthen.desy.de:32002
+    # enableDebug: true
+    # connectors:
+    #   - type: oidc
+    #     id: ctao-wms-auth
+    #     name: "IAM CTAO"
+    #     config:
+    #       issuer: https://iam-ctao.cloud.cnaf.infn.it/
+    #       clientID: 33477569-e6a9-4630-8f5c-b9db028378f2
+    #       clientSecret: UNBJqpjy9-Z6Ma6kudHuvDmP8ywsTq6-PotD3EdLs6DtmuWseK2UJnrsEysX5D0P3dcbpqLAdoKxPYE80xS8Gg
+    #       #redirectURI: https://diracx-cert.cta-test.zeuthen.desy.de/api/auth/authorize/complete
+    #       redirectURIs:
+    #         - "https://diracx-cert.cta-test.zeuthen.desy.de/api/auth/device/complete"
+    #         - "https://diracx-cert.cta-test.zeuthen.desy.de/api/auth/authorize/complete"
+
+    # staticClients:
+    #   - id: d396912e-2f04-439b-8ae7-d8c585a34790
+    #     public: true
+    #     name: "CLI app"
+    #     redirectURIs:
+    #       - "https://diracx-cert.cta-test.zeuthen.desy.de/api/auth/device/complete"
+    #       - "https://diracx-cert.cta-test.zeuthen.desy.de/api/auth/authorize/complete"
