--- a/diracx/templates/tests/indigo-iam/init-iam/job.yaml
+++ b/diracx/templates/tests/indigo-iam/init-iam/job.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.indigoiam.enabled }}
+{{- if and .Values.indigoiam.enabled .Values.diracx.indigoiam.initJobEnabled }}
 apiVersion: batch/v1
 kind: Job
 metadata:
